<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_interview_questions"
            android:icon="@drawable/ic_book_multiple_black_48dp"
            android:title="@string/interview_questions_title" />
        <item
            android:id="@+id/action_questions"
            android:icon="@drawable/ic_accusoft_black_48dp"
            android:title="@string/site_menu_quiz" />

        <item
            android:id="@+id/action_fav"
            android:icon="@drawable/ic_heart_multiple_black_48dp"
            android:title="@string/site_menu_fav" />

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/assist_title">
        <menu>
            <item
                android:id="@+id/assistant"
                android:icon="@drawable/ic_google_assistant_black_48dp"
                android:title="@string/notifications" />
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/notification"
                android:icon="@drawable/ic_bell_black_48dp"
                android:title="@string/notifications" />
            <item
                android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_shield_key_black_48dp"
                android:title="@string/privacy" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_variant_black_48dp"
                android:title="@string/share" />
            <item
                android:id="@+id/action_rate_app"
                android:icon="@drawable/ic_star_circle_outline_black_48dp"
                android:title="@string/rate" />
            <item
                android:id="@+id/action_about_dev"
                android:icon="@drawable/ic_developer_board_black_48dp"
                android:title="@string/about_dev" />
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit_to_app_black_48dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
