<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:padding="@dimen/margin_15dp">

            <de.hsworms.inf3032.engine.TextViewEngine
                android:id="@+id/first_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/toolbarTop"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:gravity="center"
                android:text="@string/welcome_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lv"
                android:layout_width="wrap_content"
                android:layout_height="355dp"
                android:layout_alignBottom="@+id/third_text"
                android:layout_marginBottom="-10dp"
                android:choiceMode="singleChoice"
                android:listSelector="@drawable/list_view_selector"></ListView>

            <de.hsworms.inf3032.engine.TextViewEngine
                android:id="@+id/third_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_text"
                android:layout_marginTop="320dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_text"
                android:layout_marginTop="30dp"
                android:background="#00897B"
                android:text="@string/quiz_button_yes"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_yes"
                android:layout_marginTop="@dimen/margin_20dp"
                android:background="@color/red"
                android:text="@string/no"
                android:textColor="@color/white" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>